# ArchePy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: .gitignore  Makefile  api.rst  changelog.md  conf.py  contributing.md  doc_requirements.txt  index.rst  license.md  tutorials.rst
docs/_static/: .gitkeep
docs/tutorials/: 01_fit_msaa_flexible.ipynb
src/archepy/: __init__.py  _utils.py  _version.py
src/archepy/core/: __init__.py  _s_update.py  spatial.py  temporal.py
src/archepy/fmri/: __init__.py  noise.py
src/archepy/init/: __init__.py  _gpu.py  furthest_sum.py
tests/: test_smoke.py
